--- a/index.html
+++ b/index.html
@@ -402,19 +402,19 @@
           <p>You can download printing version as below.</p>
         </div>
 
-        <div class="btn-group-vertical">
+        <div class="btn-group">
 
             <div class="download resume">
               <!--<a class="btn btn-warning mr-1" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
               download="Tran Quy Phong - Resume.pdf">My resume</a>-->
-              <button class="btn btn-warning mr-1" href="assets\download\Tran Quy Phong - Resume.pdf">Resume</button>
+              <button class="btn btn-warning mr-3" href="assets\download\Tran Quy Phong - Resume.pdf">Resume</button>
               </div>
             </div>
 
             <div class="download credentials">
               <!--<a class="btn btn-warning mr-1" role="button" href="assets\download\My credentials.pdf" 
               download="My credentials.pdf">My credentials</a> -->
-              <button class="btn btn-warning mr-1" href="assets\download\My credentials.pdf">Credentials</button>
+              <button class="btn btn-warning" href="assets\download\My credentials.pdf">Credentials</button>
               </div>
             </div>
 
