--- a/index.html
+++ b/index.html
@@ -402,16 +402,16 @@
           <p>You can download printing version as below.</p>
         </div>
 
-        <div class="btn-group">
+        <div class="row">
 
-            <div class="download resume">
+            <div class="col-xs-6">
               <!--<a class="btn btn-warning mr-1" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
               download="Tran Quy Phong - Resume.pdf">My resume</a>-->
               <button class="btn btn-warning mr-3" href="assets\download\Tran Quy Phong - Resume.pdf">Resume</button>
               </div>
             </div>
 
-            <div class="download credentials">
+            <div class="col-xs-6">
               <!--<a class="btn btn-warning mr-1" role="button" href="assets\download\My credentials.pdf" 
               download="My credentials.pdf">My credentials</a> -->
               <button class="btn btn-warning" href="assets\download\My credentials.pdf">Credentials</button>
