--- a/index.html
+++ b/index.html
@@ -402,13 +402,11 @@
           <p>You can download printing version as below.</p>
         </div>
 
-        <div class="row">
-
             <div class="col-xs-6">
               <!--<a class="btn btn-warning mr-1" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
               download="Tran Quy Phong - Resume.pdf">My resume</a>-->
               <button class="btn btn-warning mr-3" href="assets\download\Tran Quy Phong - Resume.pdf">Resume</button>
-            
+            </div>
             
 
             <div class="col-xs-6">
