--- a/index.html
+++ b/index.html
@@ -405,11 +405,11 @@
         <div class="btn-group">
               <!--<a class="btn btn-warning mr-1" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
               download="Tran Quy Phong - Resume.pdf">My resume</a>-->
-              <button class="btn btn-warning mr-3" href="assets\download\Tran Quy Phong - Resume.pdf">Resume</button>
+              <button class="btn btn-danger mr-3" href="assets\download\Tran Quy Phong - Resume.pdf">Resume</button>
             
               <!--<a class="btn btn-warning mr-1" role="button" href="assets\download\My credentials.pdf" 
               download="My credentials.pdf">My credentials</a> -->
-              <button class="btn btn-warning" href="assets\download\My credentials.pdf">Credentials</button>
+              <button class="btn btn-danger" href="assets\download\My credentials.pdf">Credentials</button>
             
           </div>
 
