--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
           <p>You can download printing version as below.</p>
         </div>
         
-        <div class="row skills-content">
+        <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
             <div class="btn-group">
                 <!--<a class="btn btn-warning mr-1" role="button" href="assets\download\Tran Quy Phong - Resume.pdf" 
