--- a/index.html
+++ b/index.html
@@ -408,7 +408,7 @@
             <button class="btn btn-danger mr-4" href="assets\download\Tran Quy Phong - Resume.pdf">Resume</button>
           </div>
         
-          <div class="col-lg-6" data-aos="fade-up">
+          <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <button class="btn btn-danger" href="assets\download\My credentials.pdf">Credentials</button>
           </div>
             
