--- a/index.html
+++ b/index.html
@@ -402,7 +402,7 @@
           <p>You can download printing version as below.</p>
         </div>
         
-        <div class="btn-group">
+        <div class="btn-group" role="group">
 
           <div class="col-lg-6" data-aos="fade-up">
             <button class="btn btn-outline-danger mr-1" href="assets\download\Tran Quy Phong - Resume.pdf">Resume</button>
