--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
     <div class="hero-container" data-aos="fade-in">
       <h1>Welcome to my page</h1>
       <p><span class="typed" data-typed-items="I'm Phong, I'm a tax consultant, I'm a technology enthusiast, 
-        Above all I'm a philomath"></span></p>
+        Above all, I'm a philomath"></span></p>
     </div>
   </section><!-- End Hero -->
 
