--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Birthday:</strong> 18 Jul 1991</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Phone:</strong> +84 935 880 865</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>City:</strong> Ho Chi Minh, Vietnam</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Address:</strong> Ho Chi Minh City, Vietnam</li>
                 </ul>
               </div>
               <div class="col-lg-6">
