--- a/index.html
+++ b/index.html
@@ -406,11 +406,11 @@
           <div class="btn-group" role="group">
 
             <div class="col-lg-6" data-aos="fade-up">
-              <button class="btn btn-outline-danger mr-1" href="assets/download/Tran Quy Phong - Resume.pdf">Resume</button>
+              <a class="btn btn-outline-danger mr-1" href="assets/download/Tran Quy Phong - Resume.pdf">Resume</a>
             </div>
           
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <button class="btn btn-outline-danger" href="assets/download/My credentials.pdf">Credentials</button>
+              <a class="btn btn-outline-danger" href="assets/download/My credentials.pdf">Credentials</a>
             </div>
         
           </div>
