--- a/index.html
+++ b/index.html
@@ -406,11 +406,11 @@
           <div class="btn-group" role="group">
 
             <div class="col-lg-6" data-aos="fade-up">
-              <a class="btn btn-outline-danger mr-1" target="_blank" href="assets/download/Tran Quy Phong - Resume.pdf">Resume</a>
+              <a class="btn btn-outline-danger mr-1" href="assets/download/Tran Quy Phong - Resume.pdf" target="_blank">Resume</a>
             </div>
           
             <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
-              <a class="btn btn-outline-danger" target="_blank" href="assets/download/My credentials.pdf">Credentials</a>
+              <a class="btn btn-outline-danger" href="assets/download/My credentials.pdf" target="_blank">Credentials</a>
             </div>
         
           </div>
