--- a/index.html
+++ b/index.html
@@ -433,9 +433,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <form 
-            action="https://formspree.io/quyphong91@gmail.com"
-            method="POST">
+          <form action="https://formspree.io/mjveakkk" method="POST">
             <label>Your Name:<input type="text" name="name"></label>
             <label>Your Email:<input type="email" name="_replyto"></label>
             <label>Message:<textarea name="message"></textarea></label>
