--- a/index.html
+++ b/index.html
@@ -433,11 +433,22 @@
 
         <div class="row" data-aos="fade-in">
 
-          <form action="https://formspree.io/mjveakkk" method="POST">
-            <label>Your Name:<input type="text" name="name"></label>
-            <label>Your Email:<input type="email" name="_replyto"></label>
-            <label>Message:<textarea name="message"></textarea></label>
-            <input type="submit" value="Send">
+          <form action="https://formspree.io/mjveakkk">
+            
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Your name</label>
+              <input type="email" class="form-control" placeholder="ex: Donald Trump">
+            </div>
+
+            <div class="form-group">
+              <label for="exampleFormControlInput1">Your email address</label>
+              <input type="email" class="form-control" placeholder="name@example.com">
+            </div>
+
+            <div class="form-group">
+              <label for="exampleFormControlTextarea1">Your message here</label>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
           </form>
 
         </div>
