--- a/index.html
+++ b/index.html
@@ -449,6 +449,7 @@
               <label for="exampleFormControlTextarea1">Your message here</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
+            <input type="submit" value="Send">
           </form>
 
         </div>
