--- a/index.html
+++ b/index.html
@@ -437,7 +437,7 @@
             
             <div class="form-group">
               <label for="exampleFormControlInput1">Your name</label>
-              <input type="email" class="form-control" placeholder="ex: Donald Trump">
+              <input type="text" class="form-control" placeholder="ex: Donald Trump">
             </div>
 
             <div class="form-group">
