--- a/index.html
+++ b/index.html
@@ -433,7 +433,7 @@
 
         <div class="row" data-aos="fade-in">
 
-          <form action="https://formspree.io/mjveakkk">
+          <form action="https://formspree.io/mjveakkk" method="POST">
             
             <div class="form-group">
               <label for="exampleFormControlInput1">Your name</label>
