--- a/index.html
+++ b/index.html
@@ -435,17 +435,19 @@
 
           <form action="https://formspree.io/mjveakkk" method="POST">
             
-            <div class="form-group">
-              <label for="exampleFormControlInput1">Your name</label>
-              <input type="text" class="form-control" placeholder="ex: Donald Trump">
+            <div class="row">
+              <div class="col">
+                <label for="exampleFormControlInput1">Your name</label>
+                <input type="text" class="form-control" placeholder="ex: Donald Trump">
+              </div>
+
+              <div class="col">
+                <label for="exampleFormControlInput1">Your email address</label>
+                <input type="email" class="form-control" placeholder="name@example.com">
+              </div>
             </div>
 
-            <div class="form-group">
-              <label for="exampleFormControlInput1">Your email address</label>
-              <input type="email" class="form-control" placeholder="name@example.com">
-            </div>
-
-            <div class="form-group">
+            <div class="row">
               <label for="exampleFormControlTextarea1">Your message here</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
