--- a/index.html
+++ b/index.html
@@ -451,7 +451,7 @@
               <label for="exampleFormControlTextarea1">Your message here</label>
               <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
-            <input type="submit" value="Send">
+            <button type="submit" class="btn btn-outline-danger">Send</button>
           </form>
 
         </div>
