--- a/index.html
+++ b/index.html
@@ -433,7 +433,10 @@
 
         <div class="row" data-aos="fade-in">
 
-          <form action="https://formspree.io/mjveakkk" method="POST">
+          <form 
+            action="https://formspree.io/mjveakkk" 
+            method="POST"
+            >
             
             <div class="row">
               <div class="col">
