--- a/index.html
+++ b/index.html
@@ -441,18 +441,18 @@
             <div class="row">
               <div class="col">
                 <label for="exampleFormControlInput1">Your name</label>
-                <input type="text" class="form-control" placeholder="ex: Donald Trump">
+                <input type="text" class="form-control" placeholder="ex: Donald Trump" name="name">
               </div>
 
               <div class="col">
                 <label for="exampleFormControlInput1">Your email address</label>
-                <input type="email" class="form-control" placeholder="name@example.com">
+                <input type="email" class="form-control" placeholder="name@example.com" name="_replyto">
               </div>
             </div>
 
             <div class="row">
               <label for="exampleFormControlTextarea1">Your message here</label>
-              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+              <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="message"></textarea>
             </div>
             <button type="submit" class="btn btn-outline-danger">Send</button>
           </form>
