--- a/index.html
+++ b/index.html
@@ -438,20 +438,19 @@
               action="https://formspree.io/mjveakkk" 
               method="POST"
               >
-              
-              <div class="row">
-                <div class="col">
+
+                <div class="form-group">
                   <label for="exampleFormControlInput1">Your name</label>
                   <input type="text" class="form-control" placeholder="ex: Donald Trump" name="name">
                 </div>
 
-                <div class="col">
+                <div class="form-group">
                   <label for="exampleFormControlInput1">Your email address</label>
                   <input type="email" class="form-control" placeholder="name@example.com" name="_replyto">
                 </div>
               </div>
 
-              <div class="row">
+              <div class="form-group">
                 <label for="exampleFormControlTextarea1">Your message here</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="message"></textarea>
               </div>
