--- a/index.html
+++ b/index.html
@@ -454,7 +454,10 @@
                 <label for="exampleFormControlTextarea1">Your message here</label>
                 <textarea class="form-control" id="exampleFormControlTextarea1" rows="3" name="message"></textarea>
               </div>
-              <button type="submit" class="btn btn-outline-danger">Send</button>
+              
+              <div class="col-sm-10">
+                <button type="submit" class="btn btn-outline-danger">Send</button>
+              </div>
             </form>
 
           </div>
