--- a/index.html
+++ b/index.html
@@ -430,6 +430,8 @@
           <h2>Contact</h2>
           <p>Please drop me an email should you need further information.</p>
         </div>
+
+          <div class="row">
             
             <div class="container">
               
@@ -470,6 +472,8 @@
               </form>
 
             </div>
+
+          </div>
 
       </div>
     </section><!-- End Contact Section -->
