--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
               I have a broad understanding of how tax fits into the wider business picture.
               My in-depth technical knowledge across from different types of tax (Personal Income Tax, Corporate Income Tax, 
               Value Added Tax, Foreign Contractor Tax, Customs duties) 
-              could help your company meet the compliant responsibilities while seizing available tax saving opportunities.
+              could help business meet the compliant responsibilities while seizing available tax saving opportunities.
               My almost five-year employment at Big 4 firms also develops my professional working style, 
               fosters curiosity to learn new things as well as encourages a high sense of commitment and responsibility.
             </p>
