--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
               My in-depth technical knowledge across from different types of tax (Personal Income Tax, Corporate Income Tax, 
               Value Added Tax, Foreign Contractor Tax, Customs duties) 
               could help business meet the compliant responsibilities while seizing available tax saving opportunities.
-              My almost five-year employment at Big 4 firms also develops my professional working style, 
+              Almost five-year employment at Big 4 firms also develops my professional working style, 
               fosters curiosity to learn new things as well as encourages a high sense of commitment and responsibility.
             </p>
             <div class="row">
