--- a/index.html
+++ b/index.html
@@ -51,15 +51,16 @@
         </div>
       </div>
 
-      <nav class="nav-menu">
-        <ul>
-          <li class="active"><a href="index.html"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#facts"><i class="bx bx-book-content"></i> Facts</a></li>
-          <li><a href="#services"><i class="bx bxs-briefcase"></i> Typical services</a></li>
-          <li><a href="#resume"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#contact"><i class="bx bx-envelope"></i> Contact</a></li>
-        </ul>
+    <!-- Nav Start -->
+    <div class="classynav">
+      <ul id="nav">
+          <li class="active"><a href="index.html">Home</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#facts">Gallery</a></li>
+          <li><a href="#service">Blog</a></li>
+          <li><a href="#resume">Contact</a></li>
+          <li><a href="#contact">Contact</a></li>
+      </ul>
       </nav><!-- .nav-menu -->
       <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
 
@@ -82,11 +83,12 @@
       <div class="container">
 
         <div class="section-title">
-          <h2>About</h2>
-          <p>I am not a person who knows everything, but I am defintely a person who wants to learn everything.</p>
-            <p>My expertise solely lies in taxation so far, hence 
-              I am pursuing Certified Management Accountant program to expand my knowledge of finance.
-              As a true technology lover, I am enthusiastic about leveraging the rapid development 
+          <h2>About me</h2>
+          <p class="font-italic"> <span>&#8220 A little learning is a dangerous thing
+            Drink deep, or taste not the Pierian spring
+            There shallow draughts intoxicate the brain
+            And drinking largely sobers us again </span> </p>
+            <p>I am not a person who knows everything, but I am defintely a person who wants to learn everything. I am also a technology lover, who is enthusiastic about leveraging the rapid development 
               of technology to solve business problems.</p>
         </div>
 
@@ -95,15 +97,12 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Tax consultant</h3>
             <p class="font-italic">
-              Assisting a large number of foreign companies doing business in Vietnam in the past 6 years, 
+              An open-minded, team player, high sense of commitment and responsibility person with broad experience in Vietnamese taxation, finance and general administration. 
               I have a broad understanding of how tax fits into the wider business picture.
-              My in-depth technical knowledge across from different types of tax (Personal Income Tax, Corporate Income Tax, 
-              Value Added Tax, Foreign Contractor Tax, Customs duties) 
-              could help business meet the compliant responsibilities while seizing available tax saving opportunities.
-              Almost five-year employment at Big 4 firms also develops my professional working style, 
-              fosters curiosity to learn new things as well as encourages a high sense of commitment and responsibility.
+              I prefer a working environment built on trust and integrity, 
+              a board of leaders who fosters a culture of encouraging people to collaborate in harmony, 
+              constructive and meaningful manner.
             </p>
             <div class="row">
               <div class="col-lg-6">
@@ -123,8 +122,6 @@
             </div>
             <p>My career objective is to become an inspiring knowledgeable person whose expertise are not limited to taxation 
               but also including finance, technology, good business senses and problem-solving skills.</p>
-            <p>Now, I am looking for a working environment which offers to learn on-the-job and exposure 
-              to every angle of business to achieve the above goals.</p>
           </div>
         </div>
 
@@ -146,7 +143,7 @@
                 <div class="count-box">
                   <p>More than</p>
                   <i class="icofont-live-support"></i>
-                  <span data-toggle="counter-up">1,500</span>
+                  <span data-toggle="counter-up">30,000</span>
                   <p><strong>hours</strong> of consulting</p>
                 </div>
               </div>
@@ -189,40 +186,39 @@
 
         <div class="section-title">
           <h2>Typical services</h2>
-          <p>Typical services which I usually provide to my clients:</p>
         </div>
 
         <div class="row">
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="icofont-stethoscope-alt"></i></div>
             <h4 class="title"><a href="">Compliance review</a></h4>
-            <p class="description">Review clients' tax compliant status. Identify tax risk areas and recommend remedy course of actions (if any)</p>
+            <p class="description">Review clients' tax/customs compliance status. Identify tax/customs risk areas and recommend remedy course of actions (if any)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-presentation"></i></div>
-            <h4 class="title"><a href="">Ad-hoc tax advice</a></h4>
-            <p class="description">Provide tax advice on ad-hoc basis via phone call, email, memo, long-form report</p>
+            <h4 class="title"><a href="">Ad-hoc advisory</a></h4>
+            <p class="description">Provide tax/customs advice on ad-hoc basis via phone call, email, memo, long-form report</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-court-hammer"></i></div>
             <h4 class="title"><a href="">Audit and post audit support</a></h4>
-            <p class="description">Assist clients in working with tax auditor during the tax audit and advise best practices. 
-              Advise necessary course of actions after the tax audit in case of dispute</p>
+            <p class="description">Assist clients in working with tax/customs auditor during the tax/customs audit and advise best practices. 
+              Advise necessary course of actions post tax/customs audit in case of dispute</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="icofont-investigation"></i></div>
-            <h4 class="title"><a href="">Tax due diligence</a></h4>
-            <p class="description">Review and identify potential tax risks arose from the sellers' operation 
+            <h4 class="title"><a href="">Due diligence</a></h4>
+            <p class="description">Review and identify potential tax/customs risks arose from the sellers' operation 
               which may create future liability for the buyers after the M&A</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-law-document"></i></div>
-            <h4 class="title"><a href="">Tax return preparation</a></h4>
-            <p class="description">Assist the clients in calculating the tax liability and preparing appropriate tax returns</p>
+            <h4 class="title"><a href="">Tax/customs compliance support</a></h4>
+            <p class="description">Assist the clients in review/preparation of tax returns, customs finalization reports</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
             <div class="icon"><i class="icofont-bank"></i></div>
-            <h4 class="title"><a href="">Payroll </a></h4>
+            <h4 class="title"><a href="">Payroll support</a></h4>
             <p class="description"> Day-to-day assistance on all payroll and payroll-related issues</p>
           </div>
         </div>
@@ -241,20 +237,9 @@
 
         <div class="row">
           <div class="col-lg-6" data-aos="fade-up">
-            <h3 class="resume-title">Sumary</h3>
-            <div class="resume-item pb-0">
-              <h4>Tran Quy Phong</h4>
-              <p><em>Dedicated and integrity tax consultant with 4+ years of experience assisting companies doing business in Vietnam in compliant way.</em></p>
-              <ul>
-                <li>Ho Chi Minh City, Vietnam</li>
-                <li>+84 935 880 865</li>
-                <li>quyphong91@gmail.com</li>
-              </ul>
-            </div>
-
-            <h3 class="resume-title">Education</h3>
+              <h3 class="resume-title">Education</h3>
             <div class="resume-item">
-              <h4>Disploma &amp; Certificate of IFRS (on-going)</h4>
+              <h4>CPA Australia</h4>
               <h5>Jul 2020 - Aug 2020</h5>
               <p><em>ACCA</em></p>
             </div>
@@ -287,16 +272,36 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Senior Tax Advisory (Deputy Tax Manager)</h4>
-              <h5>Nov 2016 - Feb 2019</h5>
-              <p><em>EY Vietnam Limited </em></p>
+              <h4>Corporate Controller</h4>
+              <h5>Oct 2020 - Present</h5>
+              <p><em>KPMG Vietnam</em></p>
               <ul>
-                <li>Work closely with Manager and/or Director in conducting tax compliance and advisory services, including but not limited to PIT, CIT, VAT, Trade & Customs for leading companies in Vietnam;</li>
-                <li>Participate in due diligence for M&A transactions; </li>
-                <li>Working with tax/customs authorities during tax/customs audit;</li>
-                <li>Mentor and assist staff to discover and reach their full potential;</li>
-                <li>Manage deadlines, team performance and clients’ expectation; and</li>
-                <li>Developing effective relationships with clients and key contacts from relevant parties</li>
+                <li>Manage all aspect of tax & customs compliance and advisory projects, including but not limited to clients’ expectation, team performance, financial management (WIP, invoicing, etc.)</li>
+                <li>Communicate with Partner and Directors to update on the project progress and ensure the project meets standard quality</li>
+                <li>Manage the performance and coach junior team members to help them reach their full potential</li>
+                <li>Support in training and businesses development activities e.g. preparing presentation deck for seminars, training material, etc.</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Corporate Controller</h4>
+              <h5>Jun 2020 - Oct 2020</h5>
+              <p><em>L’Oréal Vietnam</em></p>
+              <ul>
+                <li>Manage monthly closing</li>
+                <li>Actual versus budget analysis</li>
+                <li>Coordinate with budget owners to build budget and trend</li>
+                <li>Control and approve spending request</li>
+                <li>Compliance review on cost in SG&A and internal control</li>
+              </ul>
+            </div>
+            <div class="resume-item">
+              <h4>Senior Tax Advisory</h4>
+              <h5>Nov 2016 - Feb 2019</h5>
+              <p><em>EY Vietnam</em></p>
+              <ul>
+                <li>Work closely with Managers and Director in conducting tax & customs compliance and advisory project</li>
+                <li>Support clients to work with tax/customs authorities during the tax/customs audit</li>
+                <li>Mentor new joiners and assist them to develop technical skills</li>
               </ul>
             </div>
             <div class="resume-item">
