--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
     <div class="classynav">
       <ul id="nav">
           <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">About</a></li>
-          <li><a href="#facts">Gallery</a></li>
-          <li><a href="#service">Blog</a></li>
-          <li><a href="#resume">Contact</a></li>
+          <li><a href="#about">About me</a></li>
+          <li><a href="#facts">Facts</a></li>
+          <li><a href="#service">Services</a></li>
+          <li><a href="#resume">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
       </ul>
       </nav><!-- .nav-menu -->
