--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           <li class="active"><a href="index.html">Home</a></li>
           <li><a href="#about">About me</a></li>
           <li><a href="#facts">Facts</a></li>
-          <li><a href="#service">Services</a></li>
+          <li><a href="#service">Typical services</a></li>
           <li><a href="#resume">Resume</a></li>
           <li><a href="#contact">Contact</a></li>
       </ul>
