--- a/index.html
+++ b/index.html
@@ -84,10 +84,10 @@
 
         <div class="section-title">
           <h2>About me</h2>
-          <p class="font-italic"> <span>&#8220 A little learning is a dangerous thing
+          <p class="font-italic"> <span>&#8220A little learning is a dangerous thing
             Drink deep, or taste not the Pierian spring
             There shallow draughts intoxicate the brain
-            And drinking largely sobers us again </span> </p>
+            And drinking largely sobers us again&#8221 </span> </p>
             <p>I am not a person who knows everything, but I am defintely a person who wants to learn everything. I am also a technology lover, who is enthusiastic about leveraging the rapid development 
               of technology to solve business problems.</p>
         </div>
