--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             Drink deep, or taste not the Pierian spring<br>
             There shallow draughts intoxicate the brain<br>
             And drinking largely sobers us again&#8221<br></span> </p>
-            <p>I am not a person who knows everything, but I am defintely a person who wants to learn everything. I am also a technology lover, who is enthusiastic about leveraging the rapid development 
+            <p><br>I am not a person who knows everything, but I am defintely a person who wants to learn everything. I am also a technology lover, who is enthusiastic about leveraging the rapid development 
               of technology to solve business problems.</p>
         </div>
 
