--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
                 <ul>
                   <li><i class="icofont-rounded-right"></i> <strong>Degree:</strong> Bachelor of Financial Management</li>
                   <li><i class="icofont-rounded-right"></i> <strong>Email:</strong> quyphong91@gmail.com</li>
-                  <li><i class="icofont-rounded-right"></i> <strong>Job status:</strong> Looking for opportunities</li>
+                  <li><i class="icofont-rounded-right"></i> <strong>Job status:</strong> Open for job opportunity</li>
                 </ul>
               </div>
             </div>
