--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
 
 <body>
 
+  <!-- ======= Mobile nav toggle button ======= -->
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
@@ -52,19 +55,17 @@
       </div>
 
     <!-- Nav Start -->
-    <div class="classynav">
-      <ul id="nav">
-          <li class="active"><a href="index.html">Home</a></li>
-          <li><a href="#about">About me</a></li>
-          <li><a href="#facts">Facts</a></li>
-          <li><a href="#services">Typical services</a></li>
-          <li><a href="#resume">Resume</a></li>
-          <li><a href="#contact">Contact</a></li>
+    <nav id="navbar" class="nav-menu navbar">
+      <ul>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
+        <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Facts</span></a></li>
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Typical services</span></a></li>
+        <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Resume</span></a></li>
+        <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
-      </nav><!-- .nav-menu -->
-      <button type="button" class="mobile-nav-toggle d-xl-none"><i class="icofont-navigation-menu"></i></button>
-
-    </div>
+    </nav><!-- .nav-menu -->
+  </div>
   </header><!-- End Header -->
 
   <!-- ======= Hero Section ======= -->
