--- a/index.html
+++ b/index.html
@@ -37,9 +37,6 @@
 
 <body>
 
-  <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
-
   <!-- ======= Header ======= -->
   <header id="header">
     <div class="d-flex flex-column">
@@ -62,6 +59,7 @@
         <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Facts</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Typical services</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Resume</span></a></li>
+        <li><a href="#download" class="nav-link scrollto"><i class="bx bx-download"></i> <span>Download</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
     </nav><!-- .nav-menu -->
