--- a/index.html
+++ b/index.html
@@ -56,9 +56,10 @@
       <ul>
         <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
         <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
-        <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Facts</span></a></li>
-        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Typical services</span></a></li>
+        <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-line-chart"></i> <span>Facts</span></a></li>
+        <li><a href="#services" class="nav-link scrollto"><i class="bx bx-briefcase-alt"></i> <span>Typical services</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Resume</span></a></li>
+        <li><a href="#skills" class="nav-link scrollto"><i class="bx bx-award"></i> <span>Skills</span></a></li>
         <li><a href="#download" class="nav-link scrollto"><i class="bx bx-download"></i> <span>Download</span></a></li>
         <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
       </ul>
