--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
 </head>
 
 <body>
+  <!-- ======= Mobile nav toggle button ======= -->
+  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
 
   <!-- ======= Header ======= -->
   <header id="header">
@@ -191,7 +193,7 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up">
             <div class="icon"><i class="icofont-stethoscope-alt"></i></div>
             <h4 class="title"><a href="">Compliance review</a></h4>
-            <p class="description">Review clients' tax/customs compliance status. Identify tax/customs risk areas and recommend remedy course of actions (if any)</p>
+            <p class="description">Review clients' tax/customs compliance status. Identify tax and customs risk areas and recommend remedy course of actions (if any)</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="100">
             <div class="icon"><i class="icofont-presentation"></i></div>
@@ -201,18 +203,18 @@
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="200">
             <div class="icon"><i class="icofont-court-hammer"></i></div>
             <h4 class="title"><a href="">Audit and post audit support</a></h4>
-            <p class="description">Assist clients in working with tax/customs auditor during the tax/customs audit and advise best practices. 
+            <p class="description">Assist clients in working with tax and customs auditor during the tax and customs audit and advise best practices. 
               Advise necessary course of actions post tax/customs audit in case of dispute</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="300">
             <div class="icon"><i class="icofont-investigation"></i></div>
             <h4 class="title"><a href="">Due diligence</a></h4>
-            <p class="description">Review and identify potential tax/customs risks arose from the sellers' operation 
+            <p class="description">Review and identify potential tax and customs risks arose from the sellers' operation 
               which may create future liability for the buyers after the M&A</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="400">
             <div class="icon"><i class="icofont-law-document"></i></div>
-            <h4 class="title"><a href="">Tax/customs compliance support</a></h4>
+            <h4 class="title"><a href="">Tax and customs compliance support</a></h4>
             <p class="description">Assist the clients in review/preparation of tax returns, customs finalization reports</p>
           </div>
           <div class="col-lg-4 col-md-6 icon-box" data-aos="fade-up" data-aos-delay="500">
@@ -271,7 +273,7 @@
           <div class="col-lg-6" data-aos="fade-up" data-aos-delay="100">
             <h3 class="resume-title">Professional Experience</h3>
             <div class="resume-item">
-              <h4>Corporate Controller</h4>
+              <h4>Tax Manager</h4>
               <h5>Oct 2020 - Present</h5>
               <p><em>KPMG Vietnam</em></p>
               <ul>
@@ -294,7 +296,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Senior Tax Advisory</h4>
+              <h4>Tax Senior</h4>
               <h5>Nov 2016 - Feb 2019</h5>
               <p><em>EY Vietnam</em></p>
               <ul>
@@ -304,7 +306,7 @@
               </ul>
             </div>
             <div class="resume-item">
-              <h4>Tax consultant</h4>
+              <h4>Tax Consultant</h4>
               <h5>Oct 2014 - Sep 2016</h5>
               <p><em>KPMG Tax &amp; Advisory Limited Branch</em></p>
               <ul>
