--- a/index.html
+++ b/index.html
@@ -56,8 +56,8 @@
     <!-- Nav Start -->
     <nav id="navbar" class="nav-menu navbar">
       <ul>
-        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About Me</span></a></li>
+        <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Back to Top</span></a></li>
+        <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About me</span></a></li>
         <li><a href="#facts" class="nav-link scrollto"><i class="bx bx-line-chart"></i> <span>Facts</span></a></li>
         <li><a href="#services" class="nav-link scrollto"><i class="bx bx-briefcase-alt"></i> <span>Typical services</span></a></li>
         <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Resume</span></a></li>
