--- a/index.html
+++ b/index.html
@@ -296,6 +296,14 @@
               </ul>
             </div>
             <div class="resume-item">
+              <h4>Full-time parenting</h4>
+              <h5>Mar 2019 - May 2020</h5>
+              <p><em>Career break</em></p>
+              <ul>
+                <li>I took one-year break spending time raising my son as well as learning things I love to</li>
+              </ul>
+            </div>
+            <div class="resume-item">
               <h4>Tax Senior</h4>
               <h5>Nov 2016 - Feb 2019</h5>
               <p><em>EY Vietnam</em></p>
