--- a/index.html
+++ b/index.html
@@ -241,8 +241,8 @@
               <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>CPA Australia</h4>
-              <h5>Jul 2020 - Aug 2020</h5>
-              <p><em>ACCA</em></p>
+              <h5>On-going</h5>
+              <p><em>Associate Member</em></p>
             </div>
             <div class="resume-item">
               <h4>PostgreSQL</h4>
